--- a/NewsTagil/src/main/res/layout-xlarge/activity_tape.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/activity_tape.xml
@@ -21,13 +21,21 @@
             android:id="@+id/news_headers_scroller"
             android:layout_below="@id/tape_header"
             android:layout_alignBottom="@id/tape_first_nav">
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/content_holder"
-                >
-        </LinearLayout>
+
+
+        <RelativeLayout android:layout_width="fill_parent"
+                        android:layout_height="wrap_content">
+
+            <include
+                    android:id="@+id/tape_first_nav"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    layout="@layout/composite_tape_content" />
+
+
+        </RelativeLayout>
     </ScrollView>
 
     <include
@@ -37,7 +45,6 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             layout="@layout/composite_first_button_nav" />
-
 
 
 
