--- a/NewsTagil/src/main/res/layout-xlarge/composite_massage_header.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/composite_massage_header.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="160dp"
+        android:layout_height="220dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/massage_header_bg"
@@ -15,7 +15,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="90dp"
             android:layout_marginTop="5dp"
             android:orientation="horizontal" >
 
@@ -24,18 +24,18 @@
                 android:id="@+id/composite_massage_header_dialogs_link"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="23dp"
                 android:text="Диалоги"
-                android:textSize="22dp"
+                android:textSize="30dp"
                 android:textColor="#4D433A" />
 
             <Button
                 android:id="@+id/composite_massage_header_ref_button"
                 style="?android:attr/buttonStyleSmall"
-                android:layout_width="38dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="50dp"
+                android:layout_height="55dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginRight="30dp"
                 android:background="@drawable/first_header_button"
                 android:layout_alignParentTop="true"
@@ -44,9 +44,9 @@
         </RelativeLayout>
 
         <LinearLayout
-                android:layout_width="133dp"
-                android:layout_height="75dp"
-                android:layout_marginTop="15dp"
+                android:layout_width="300dp"
+                android:layout_height="140dp"
+                android:layout_marginTop="7dp"
                 android:layout_marginLeft="20dp"
                 android:orientation="vertical" >
 
@@ -57,8 +57,8 @@
 
                 <ImageView
                     android:id="@+id/header_img_cloud"
-                    android:layout_width="46dp"
-                    android:layout_height="40dp"
+                    android:layout_width="70dp"
+                    android:layout_height="60dp"
                     android:layout_marginTop="2dp"
                     android:src="@drawable/first_header_cloud" />
 
@@ -77,7 +77,7 @@
                         android:layout_marginTop="2dp"
                         android:text="сейчас:"
                         android:textColor="#FC8000"
-                        android:textSize="16dp" />
+                        android:textSize="24dp" />
 
                    <TextView
                         android:id="@+id/composite_massage_header_tomorrow"
@@ -85,7 +85,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="0dp"
-                        android:textSize="16dp"
+                        android:textSize="24dp"
                         android:textColor="#fff"
                         android:text="завтра:" />
                     
@@ -104,17 +104,17 @@
 
             <LinearLayout
                     android:orientation="vertical"
-                    android:layout_width="45dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical">
 
                 <Button
                         android:id="@+id/composite_massage_header_back_button"
                         style="?android:attr/buttonStyleSmall"
-                        android:layout_marginTop="3dp"
+                        android:layout_marginTop="12dp"
                         android:layout_marginLeft="1dp"
-                        android:layout_width="35dp"
-                        android:layout_height="30dp"
+                        android:layout_width="50dp"
+                        android:layout_height="40dp"
                         android:background="@drawable/back_header_button"
                         android:text="" />
 
