--- a/NewsTagil/src/main/res/values/dimens.xml
+++ b/NewsTagil/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="devault_size">15sp</dimen>
     <dimen name="margin_right">10dp</dimen>
     <dimen name="time_text_size">10sp</dimen>
+    <dimen name="font_size">12sp</dimen>
 </resources>
