--- a/NewsTagil/src/main/res/layout/composite_interlocutor.xml
+++ b/NewsTagil/src/main/res/layout/composite_interlocutor.xml
@@ -14,11 +14,10 @@
 
         <RelativeLayout
                 android:background="@drawable/border_img"
-                android:orientation="horizontal"
                 android:id="@+id/message_item_image"
                 android:layout_width="wrap_content"
                 android:layout_weight="0.15"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 >
             <ImageView
                     android:layout_width="70dp"
@@ -41,10 +40,9 @@
 
         <RelativeLayout
                 android:id="@+id/message_item_last"
-                android:orientation="vertical"
                 android:layout_weight="0.85"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 >
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
